# talkthroughit

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/talkthroughit/: __init__.py  app.py
src/talkthroughit/components/: app.py  canvas.py  chatcomponent.py  color_selector.py  room.py  tabs.py  whiteboard.py
src/talkthroughit/data/: room.py  session.py
src/talkthroughit/llm/: chat.py  retrieval.py
src/talkthroughit/rooms/: room.py
src/talkthroughit/static/: styles.css
