[project]
name = "talkthroughit"
version = "0.1.0"
description = "Talk through it!"
readme = "README.md"
authors = [
    { name = "enwask", email = "enwask@ucf.edu" },
    { name = "morgulveil", email = "calkowska.aga@gmail.com" },
    { name = "hector20004", email = "hg482414@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "langchain-community>=0.4",
    "langchain[google-genai]>=1.0.2",
    "pypdf>=6.1.3",
    "streamlit>=1.50.0",
    "streamlit-drawable-canvas>=0.9.3",
]

[project.scripts]
talkthroughit = "talkthroughit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
