[project]
name = "talkthroughit"
version = "0.1.0"
description = "Talk through it!"
readme = "README.md"
authors = [
    { name = "enwask", email = "enwask@ucf.edu" },
    { name = "morgulveil", email = "calkowska.aga@gmail.com" },
    { name = "hector20004", email = "hg482414@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "elevenlabs>=2.20.1",
    "extra-streamlit-components>=0.1.81",
    "langchain-community>=0.4",
    "langchain[google-genai]>=1.0.2",
    "pocketsphinx>=5.0.4",
    "pydub>=0.25.1",
    "pypdf>=6.1.3",
    "speechrecognition>=3.14.3",
    "streamlit>=1.50.0",
    "streamlit-code-editor>=0.1.22",
    "streamlit-drawable-canvas>=0.9.3",
    "streamlit-option-menu>=0.4.0",
    "streamlit-realtime-audio-recorder>=0.1.2",
    "streamlit-router>=0.1.8",
]

[project.scripts]
app = "talkthroughit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
